--- a/index.html
+++ b/index.html
@@ -13,14 +13,28 @@
     <meta name="description"
           content="Maven 公共代理仓库，代理多种常见 Maven 仓库，帮助开发者有效解决冷门依赖包无法找到的问题，加速程序编译构建。"/>
     <meta name="keywords" content="maven, mvn, repository, proxy, 公共, 代理, 仓库"/>
-    <link rel="icon" href="https://renfei.oncdn.cn/favicon.ico"/>
-    <link href="https://npm.oncdn.cn/bootstrap/5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://npm.oncdn.cn/highlight.js/11.9.0/styles/atom-one-dark.min.css" rel="stylesheet">
-    <link href="https://npm.oncdn.cn/highlightjs-copy/1.0.5/dist/highlightjs-copy.min.css" rel="stylesheet">
-    <script src="https://npm.oncdn.cn/bootstrap/5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://npm.oncdn.cn/highlight.js/11.9.0/highlight.min.js"></script>
-    <script src="https://npm.oncdn.cn/highlightjs-copy/1.0.5/dist/highlightjs-copy.min.js"></script>
-    <script src="https://npm.oncdn.cn/highlightjs-line-numbers.js/2.8.0/dist/highlightjs-line-numbers.min.js"></script>
+    <link rel="icon" href="https://cdn.renfei.net/favicon.ico"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css"
+          integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.10.0/styles/atom-one-dark.min.css"
+          integrity="sha512-Jk4AqjWsdSzSWCSuQTfYRIF84Rq/eV0G2+tu07byYwHcbTGfdmLrHjUSwvzp5HvbiqK4ibmNwdcG49Y5RGYPTg=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link href="https://unpkg.com/highlightjs-copy/dist/highlightjs-copy.min.css" rel="stylesheet"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js"
+            integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"
+            integrity="sha512-7Pi/otdlbbCR+LnW+F7PwFcSDJOuUJB3OxtEHbg4vSMvzvJjde4Po1v4BR9Gdc9aXNUNFVUY+SK51wWT8WF0Gg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.10.0/highlight.min.js"
+            integrity="sha512-6yoqbrcLAHDWAdQmiRlHG4+m0g/CT/V9AGyxabG8j7Jk8j3r3K6due7oqpiRMZqcYe9WM2gPcaNNxnl2ux+3tA=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://unpkg.com/highlightjs-copy/dist/highlightjs-copy.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlightjs-line-numbers.js/2.8.0/highlightjs-line-numbers.min.js"
+            integrity="sha512-axd5V66bnXpNVQzm1c7u1M614TVRXXtouyWCE+eMYl8ALK8ePJEs96Xtx7VVrPBc0UraCn63U1+ARFI3ofW+aA=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <style>
         .hljs {
             line-height: 1.25;
@@ -235,6 +249,16 @@
                         <td>Alfresco</td>
                         <td>https://maven.renfei.net/nexus/repository/alfresco/</td>
                         <td>https://artifacts.alfresco.com/nexus/content/repositories/public/</td>
+                    </tr>
+                    <tr>
+                        <td>Shibboleth</td>
+                        <td>https://maven.renfei.net/repository/shibboleth-releases/</td>
+                        <td>https://build.shibboleth.net/maven/releases/</td>
+                    </tr>
+                    <tr>
+                        <td>Shibboleth snapshot</td>
+                        <td>https://maven.renfei.net/repository/shibboleth-snapshot/</td>
+                        <td>https://build.shibboleth.net/maven/snapshots/</td>
                     </tr>
                     <tr>
                         <td>JEECG</td>
