增加 E-iceblue 仓库

--- a/index.html
+++ b/index.html
@@ -226,6 +226,11 @@
                         <td>https://maven-repository.openspaces.org/</td>
                     </tr>
                     <tr>
+                        <td>E-iceblue</td>
+                        <td>https://maven.renfei.net/nexus/repository/E-iceblue/</td>
+                        <td>https://repo.e-iceblue.cn/repository/maven-public/</td>
+                    </tr>
+                    <tr>
                         <td>XWiki Releases</td>
                         <td>https://maven.renfei.net/nexus/repository/xwiki/</td>
                         <td>https://maven.xwiki.org/releases/</td>
